@@ -389,6 +389,7 @@ namespace libtorrent
 		, m_last_upload(0)
 		, m_downloaders(0xffffff)
 		, m_interface_index(0)
+		, m_graceful_pause_mode(false)
 	{
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING || defined TORRENT_ERROR_LOGGING
 		(*m_ses.m_logger) << time_now_string() << " creating torrent: "
@@ -3233,6 +3234,7 @@ namespace libtorrent
 	{
 		INVARIANT_CHECK;
 
+		TORRENT_ASSERT(!m_graceful_pause_mode);
 		TORRENT_ASSERT(c.is_choked());
 		TORRENT_ASSERT(!c.ignore_unchoke_slots());
 		// when we're unchoking the optimistic slots, we might
@@ -5008,7 +5010,7 @@ namespace libtorrent
 	void torrent::check_invariant() const
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
-		if (is_paused()) TORRENT_ASSERT(num_peers() == 0);
+		if (is_paused()) TORRENT_ASSERT(num_peers() == 0 || m_graceful_pause_mode);
 
 		if (!should_check_files())
 			TORRENT_ASSERT(m_state != torrent_status::checking_files);
@@ -5526,7 +5528,8 @@ namespace libtorrent
 			|| m_state == torrent_status::queued_for_checking)
 			&& (m_allow_peers || m_auto_managed)
 			&& !has_error()
-			&& !m_abort;
+			&& !m_abort
+			&& !m_graceful_pause_mode;
 	}
 
 	void torrent::flush_cache()
@@ -5546,20 +5549,24 @@ namespace libtorrent
 	bool torrent::is_paused() const
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
-		return !m_allow_peers || m_ses.is_paused();
+		return !m_allow_peers || m_ses.is_paused() || m_graceful_pause_mode;
 	}
 
-	void torrent::pause()
+	void torrent::pause(bool graceful)
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
 		INVARIANT_CHECK;
 
 		if (!m_allow_peers) return;
 		bool checking_files = should_check_files();
-		m_allow_peers = false;
+		if (!graceful) m_allow_peers = false;
 		m_announce_to_dht = false;
 		m_announce_to_trackers = false;
 		m_announce_to_lsd = false;
+
+		// mark torrent as upload only to make peers stop request more pieces
+		m_graceful_pause_mode = graceful;
+
 		if (!m_ses.is_paused())
 			do_pause();
 		if (checking_files && !should_check_files())
@@ -5609,7 +5616,44 @@ namespace libtorrent
 				alerts().post_alert(torrent_paused_alert(get_handle()));
 		}
 
-		disconnect_all(errors::torrent_paused);
+		if (!m_graceful_pause_mode)
+		{
+			disconnect_all(errors::torrent_paused);
+		}
+		else
+		{
+			// disconnect all peers with no outstanding data to receive
+			// and choke all remaining peers to prevent responding to new
+			// requests
+			for (std::set<peer_connection*>::iterator i = m_connections.begin()
+				, end(m_connections.end()); i != end;)
+			{
+				std::set<peer_connection*>::iterator j = i++;
+				peer_connection* p = *j;
+				TORRENT_ASSERT(p->associated_torrent().lock().get() == this);
+
+				if (p->is_disconnecting())
+					m_connections.erase(j);
+
+				if (p->outstanding_bytes() > 0)
+				{
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING
+					(*p->m_logger) << "*** CHOKING PEER: torrent graceful paused\n";
+#endif
+					// remove any un-sent requests from the queue
+					p->clear_request_queue();
+					// don't accept new requests from the peer
+					if (!p->is_choked()) m_ses.choke_peer(*p);
+					continue;
+				}
+
+#if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING
+				(*p->m_logger) << "*** CLOSING CONNECTION: torrent_paused\n";
+#endif
+				p->disconnect(errors::torrent_paused);
+			}
+		}
+
 		stop_announcing();
 	}
 
@@ -5628,14 +5672,17 @@ namespace libtorrent
 	}
 #endif
 
-	void torrent::set_allow_peers(bool b)
+	void torrent::set_allow_peers(bool b, bool graceful)
 	{
 		TORRENT_ASSERT(m_ses.is_network_thread());
-		if (m_allow_peers == b) return;
+
+		if (m_allow_peers == b
+			&& m_graceful_pause_mode == graceful) return;
 
 		bool checking_files = should_check_files();
 
 		m_allow_peers = b;
+		m_graceful_pause_mode = graceful;
 
 		if (!b)
 		{
@@ -5667,6 +5714,7 @@ namespace libtorrent
 		m_announce_to_dht = true;
 		m_announce_to_trackers = true;
 		m_announce_to_lsd = true;
+		m_graceful_pause_mode = false;
 		do_resume();
 		if (!checking_files && should_check_files())
 			queue_torrent_check();
@@ -6706,7 +6754,7 @@ namespace libtorrent
 
 		st.num_complete = (m_complete == 0xffffff) ? -1 : m_complete;
 		st.num_incomplete = (m_incomplete == 0xffffff) ? -1 : m_incomplete;
-		st.paused = !m_allow_peers;
+		st.paused = !m_allow_peers || m_graceful_pause_mode;
 		bytes_done(st, flags & torrent_handle::query_accurate_download_counters);
 		TORRENT_ASSERT(st.total_wanted_done >= 0);
 		TORRENT_ASSERT(st.total_done >= st.total_wanted_done);
